Fix RTL alignment

--- a/imports/plugins/included/default-theme/client/styles/dashboard/orders.less
+++ b/imports/plugins/included/default-theme/client/styles/dashboard/orders.less
@@ -1105,7 +1105,7 @@
     }
     .search-input {
       font-size: @font-size-base;
-      padding-left: 100px;
+      .padding-left(100px);
       border-width: 1px 0;
     }
     .btn {
@@ -1113,13 +1113,13 @@
     }
     .btn, .fa {
       position: absolute;
-      right: 50px;
       top: 50%;
+      .right(50px);
       margin-top: -14px;
       padding: 0;
     }
     .fa {
-      left: 60px;
+      .left(60px);
       font-size: @font-size-large;
       margin-top: -8px;
     }
